syntax = "proto3";

package echo;

option go_package = ".";

service Echo {
  rpc SayHello(EchoRequest) returns (EchoReply);
}

message EchoRequest {
  string name = 1;
}

message EchoReply {
  string message = 1;
}
